; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarR8FromBool.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarR8FromBool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARIANT_BOOL = common dso_local global i32 0, align 4
@VarR8FromBool = common dso_local global i32 0, align 4
@VARIANT_TRUE = common dso_local global double 0.000000e+00, align 8
@VARIANT_FALSE = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarR8FromBool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarR8FromBool() #0 {
  %1 = load i32, i32* @VARIANT_BOOL, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarR8FromBool, align 4
  %4 = load double, double* @VARIANT_TRUE, align 8
  %5 = call i32 @CONVERT(i32 %3, double %4)
  %6 = load double, double* @VARIANT_TRUE, align 8
  %7 = fmul double %6, 1.000000e+00
  %8 = call i32 @EXPECT(double %7)
  %9 = load i32, i32* @VarR8FromBool, align 4
  %10 = load double, double* @VARIANT_FALSE, align 8
  %11 = call i32 @CONVERT(i32 %9, double %10)
  %12 = load double, double* @VARIANT_FALSE, align 8
  %13 = fmul double %12, 1.000000e+00
  %14 = call i32 @EXPECT(double %13)
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, double) #1

declare dso_local i32 @EXPECT(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
